resolved issue with destroying sessions https://stackoverflow.com/questions/32143936/ruby-on-rails-devise-cannot-log-out#

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -56,3 +56,8 @@ header {
     width: 80%;
     margin-left: 10%;
 }
+
+.main-head {
+    position: relative;
+    left: 20%;
+}
